--- a/package.json
+++ b/package.json
@@ -1,16 +1,21 @@
 {
   "name": "percobaan",
   "version": "1.0.0",
-  "main": "script_extract.js",
+  "description": "",
+  "main": "Appsheet.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "multiparty": "^4.2.3",
     "pdf-parse": "^1.1.1"
+  },
+  "devDependencies": {
+    "vite": "^5.2.0"
   }
 }
